# antenna-intensity-modeler

./: .dccache  .gitignore  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  appveyor.yml  azure-pipelines.yml  make.ps1  pyproject.1.toml  pyproject.toml  retrieve_token.py  run_tests.py  setup.cfg  setup.py  tox.ini
antennas/: parabolic.py  parabolic_tests.py
docs/: Makefile  antenna_intensity_modeler.rst  conf.py  index.rst  make.bat  modules.rst
docs/_build/doctrees/: antenna_intensity_modeler.doctree  authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  modules.doctree  readme.doctree  usage.doctree
docs/_build/html/: .buildinfo  antenna_intensity_modeler.html  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  (+8 more)
docs/source/: conf.py  index.rst  method.rst
src/: DARC.py  DARC2.py  DARC3.py  DARC4.py  DARC5.py  limit_line_0.9_angle_0.csv  limit_line_0.9_angle_5.csv  limit_line_10.0_angle_0.csv  limit_line_10.0_angle_5.csv  limit_line_100.0_angle_0.csv  limit_line_100.0_angle_5.csv  limit_line_100_angle_0.csv  limit_line_100_angle_5.csv  limit_line_128.4_angle_0.csv  limit_line_128.4_angle_5.csv  limit_line_14.9_angle_0.csv  limit_line_14.9_angle_5.csv  limit_line_38.2_angle_0.csv  limit_line_38.2_angle_5.csv  limitation_line_angle_0.csv  limitation_line_angle_5.csv  test.py  test_run.py
src/antenna_intensity_modeler/: __init__.py  cli.py  helpers.py  parabolic.py
tests/: context.py  test_antenna_intensity_modeler.py
(+12 files in other folders)
